<resources>
    <string name="app_name">Speaker Recognition</string>

    <string name="action_settings">Settings</string>
    <string name="infos">
        \tAndrea Luzzati\n
        \tDavide Oddone\n
        \tEmanuele Canessa\n
        \tIMEI:\t35221506509213/0
    </string>
    <string name="train">Train</string>
    <string name="recognize">Recognize</string>
    <string name="speaker">Insert your name</string>
    <string name="duration">Duration (in ms)</string>
    <string name="transformation">Transform type</string>
    <string name="DFT">DFT</string>
    <string name="DFTDescription">Discrete Fourier Transform</string>
    <string name="FFT">FFT</string>
    <string name="FFTDescription">Fast Fourier Transform</string>

    <string-array
        name="transform">
        <item>DFT</item>
        <item>FFT</item>
    </string-array>
    <string-array
        name="trDescription">
        <item>Discrete Fourier Transform</item>
        <item>Fast Fourier Transform</item>
    </string-array>
</resources>
