<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:rowCount="8">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/RecordButton"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_alignTop="@+id/radioGroup"
        android:layout_alignRight="@+id/chart"
        android:layout_alignEnd="@+id/chart"
        android:text="@string/recordbutton"
        android:layout_toEndOf="@+id/edt_Duration"
        android:layout_above="@+id/edt_Duration"
        android:layout_toRightOf="@+id/edt_Duration" />

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="0"
        android:layout_gravity="top"

        android:visibility="invisible"
        android:clickable="true"
        android:layout_above="@+id/Infos"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/tv_Results"
        android:layout_alignParentTop="false"
        android:layout_alignParentBottom="false"
        android:layout_alignParentRight="false" />


    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_row="0"
        android:layout_column="0"
        android:id="@+id/radioGroup"
        android:layout_alignStart="@+id/edt_Duration">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/train"
            android:id="@+id/rbt_Train"
            android:checked="true"
            android:layout_gravity="top" />
        <!--android:layout_row="0"
        android:layout_column="0" -->


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recognize"
            android:id="@+id/rbt_Recognize"
            android:checked="true"
            android:layout_gravity="top" />
        <!--android:layout_row="1"
        android:layout_column="0"-->
    </RadioGroup>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/edt_Duration"
        android:hint="@string/duration"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_gravity="top"
        android:layout_below="@+id/radioGroup"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_alignRight="@+id/edt_Speaker"
        android:layout_alignEnd="@+id/edt_Speaker" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/speaker"
        android:ems="10"
        android:id="@+id/edt_Speaker"
        android:layout_row="3"
        android:layout_column="0"
        android:visibility="invisible"
        android:layout_gravity="top"
        android:layout_below="@+id/edt_Duration"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_Results"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_alignWithParentIfMissing="false"
        android:layout_below="@+id/edt_Speaker"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/infos"
        android:id="@+id/Infos"
        android:layout_row="7"
        android:layout_column="0"
        android:layout_gravity="bottom"
        android:gravity="end"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
